# signalforge

./: .coverage  .gitignore  CLAUDE.md  README.md  deploy.sh  pyproject.toml
.serena/: project.yml
config/: CLAUDE.md  default.yaml
docs/superpowers/plans/: 2026-03-26-paper-trading.md
scripts/: dev-dashboard.sh  test_binance_proxy.py  test_crypto_exchanges.py  test_data_sources.py  test_llm_api.py
src/signalforge/: CLAUDE.md  __init__.py  cli.py  config.py  pipeline.py
src/signalforge/dashboard/: __init__.py  app.py
src/signalforge/data/: CLAUDE.md  __init__.py  calendar.py  discovery.py  incremental.py  models.py  providers.py  store.py
src/signalforge/engines/: __init__.py  agents_engine.py  base.py  chronos_engine.py  gbm_engine.py  kronos_engine.py  lstm_engine.py  qlib_engine.py  technical.py
src/signalforge/ensemble/: CLAUDE.md  __init__.py  combiner.py  targets.py
src/signalforge/evolution/: __init__.py  factor_registry.py  rdagent_runner.py
src/signalforge/factors/: __init__.py  compute.py  evaluate.py  library.py  operators.py  preprocess.py
src/signalforge/output/: __init__.py  report.py
src/signalforge/paper/: CLAUDE.md  __init__.py  __main__.py  dashboard.html  executor.py  models.py  pending_orders.py  portfolio.py  prices.py  server.py  signal_cache.py  simulator.py
tests/: conftest.py  test_combiner.py  test_config.py  test_e2e_browser_dashboard.py  test_e2e_dashboard.py  test_e2e_pipeline.py  test_engine_fallbacks.py  test_factors.py  test_gbm_engine.py  test_horizon.py  test_kronos.py  test_lstm_engine.py  test_models.py  test_options.py  test_paper_executor.py  test_paper_models.py  test_paper_portfolio.py  test_report.py  test_targets.py  test_technical.py
