[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalforge"
version = "0.1.0"
description = "Multi-asset buy/sell signal system leveraging Kronos, Qlib, TradingAgents, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    # Data ingestion
    "requests>=2.28",
    "pandas>=2.0",
    "polars>=1.0",
    "pyarrow>=14.0",

    # Technical analysis
    "pandas-ta>=0.3.14b",

    # ML / Deep Learning
    "torch>=2.0",
    "transformers>=4.40",
    "safetensors",
    "scikit-learn>=1.3",

    # Kronos dependencies
    "einops",

    # Configuration & CLI
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",

    # Utilities
    "httpx>=0.25",
    "tqdm",
    "loguru",
]

[project.optional-dependencies]
qlib = ["pyqlib>=0.9.6"]
agents = [
    "google-genai>=1.0",
]
chronos = ["chronos-forecasting>=1.0"]
backtest = ["vectorbt>=0.26"]
sentiment = ["transformers>=4.40"]
dashboard = ["streamlit>=1.30"]
evolution = ["rdagent"]
all = ["signalforge[qlib,agents,chronos,backtest,sentiment,dashboard,evolution]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
signalforge = "signalforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/signalforge"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "browser: Playwright browser tests (require playwright install + running server)",
]

[tool.mypy]
python_version = "3.10"
strict = true
